# modern-python-template

./: CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml  init.sh  rename.sh  rename_project.sh  template.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master.yml  release.yml  rename.yml  rename_project.yml
cpp/: CMakeLists.txt  bind_example.cpp
cpp/include/: example.h
cpp/src/: example.cpp
src/modern_python_template/: cppfunc.py  pyfunc.py
src/my_project/: __init__.py  cppfunc.py
tests/: test_cpp.py  test_py.py
